--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <a href="/about.html">About</a>
     </li>
     <li>
-        <a href="/orders.htlm">Orders</a>
+        <a href="/pages/orders.html">Orders</a>
     </li>
-    <li>
-        <a href="/">About</a>
-    </li>
+    
 
     <h1>Fantastic burger</h1>
     <ul>
