--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <title>Burgerező</title>
 </head>
 
-<body>
-    <li>
-        <a href="/">Home</a>
-    </li>
-    <li>
-        <a href="/about.html">About</a>
-    </li>
-    <li>
-        <a href="/pages/orders.html">Orders</a>
-    </li>
-    
+</body>
+    <ul>
+        <li>
+            <a href="/about.html">About</a>
+        </li>
+        <li>
+            <a href="/pages/orders.html">Orders</a>
+        </li>
+    </ul>
 
     <h1>Fantastic burger</h1>
     <ul>
@@ -44,14 +42,17 @@
     <a target="_blank" href="https://www.w3schools.com/html/default.asp">w3schools</a>
     <p></p>
     <img width="56" src="/img/Moszeszita.JPG" alt="Cicusom">
-    <p></p>
+    <p>&</p>
+    <p>
+        <i>ez egy link: </i>
+    </p>
     <a target="_blank" href="https://hu.wikipedia.org/wiki/Macska">
         <img width="128" src="/img/Moszeszita.JPG" alt="Cicusom">
         <p></p>
     </a>
     <a href="/pages/orders.html">Orders</a>
     <h3>szia, ez az én szuper oldalam / this is my superb page &&&</h3>
-    <a href="/about.html">About</a>
+
     <h6>szia, ez az én szuper oldalam / this is my superb page &&&</h6>
     <p>
         this is a paragraph
